Move media folder. Fixed styling on video, our goals and left aligned projects info

--- a/react/src/css/index.css
+++ b/react/src/css/index.css
@@ -67,13 +67,23 @@ button {
   height: 100vh;
   width: 100%; }
 
-.main-image {
-  height: 100vh;
-  background-image: url("http://192.168.33.10:3000/img/main_image.png");
-  background-position: center;
-  background-size: cover; }
+.bg-video-wrapper {
+  width: 100%;
+  height: 100vh; }
+
+.background-video {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto; }
 
 .transparent-layer {
+  position: absolute;
+  object-fit: cover;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: #000000;
@@ -133,6 +143,9 @@ button {
   flex-direction: column;
   justify-content: center;
   height: 380px; }
+
+.our-goal-container {
+  padding: 0; }
 
 .body-text {
   margin: 1em 0;
@@ -271,6 +284,9 @@ button {
 
   .latest-projects {
     margin-top: 3em; }
+    .latest-projects .projects-individual {
+      padding-right: 2.8em;
+      padding-left: 2.8em; }
 
   .contact-wrapper {
     width: 70vw;
@@ -469,11 +485,6 @@ button {
 
   #profileSplitBottom {
     margin-top: 30%; }
-
-  .latest-projects {
-    margin-top: 18em; }
-    .latest-projects h3 {
-      text-align: center; }
 
   .latest-projects {
     height: 57%; }
